--- a/circuit-benchmarks/Cargo.toml
+++ b/circuit-benchmarks/Cargo.toml
@@ -9,14 +9,13 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
 ark-std = { version = "0.3", features = ["print-trace"] }
-zkevm-circuits = { path = "../zkevm-circuits" }
+zkevm-circuits = { path = "../zkevm-circuits", features = ["test"] }
 keccak256 = { path = "../keccak256" }
 bus-mapping = { path = "../bus-mapping" }
 rand_xorshift = "0.3"
 rand = "0.8"
 itertools = "0.10"
 eth-types = { path = "../eth-types" }
-ethers-core = "0.17.0"
 env_logger = "0.9"
 ethers-signers = "0.17.0"
 mock = { path="../mock" }
