--- a/zkevm-circuits/Cargo.toml
+++ b/zkevm-circuits/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ark-std = { version = "0.3", features = ["print-trace"] }
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
 num = "0.4"
 sha3 = "0.10"
@@ -44,6 +45,7 @@ rayon = "1.5"
 once_cell = "1.17.0"
 
 [dev-dependencies]
+ark-std = { version = "0.3", features = ["print-trace"] }
 bus-mapping = { path = "../bus-mapping", features = ["test"] }
 criterion = "0.3"
 ctor = "0.1.22"
@@ -54,7 +56,7 @@ mock = { path = "../mock" }
 pretty_assertions = "1.0.0"
 
 [features]
-default = ["test", "test-circuits", "onephase", "enable-sign-verify"]
+default = ["test", "test-circuits"]
 test = ["ethers-signers", "mock"]
 test-circuits = []
 warn-unimplemented = ["eth-types/warn-unimplemented"]
